Add Spark benchmarks, fix JVM settings to match Spark recommendations
Spark comparative benchmark (SparkComparativeBench): head-to-head
against dwh-core at 10K/100K/200K/400K rows using SparkSource for
zero-overhead DataFrame access via toDataFrame + count().

SparkOverheadBench updated to use toDataFrame for cleaner phase
separation (create → plan → collect) instead of bundling plan+collect
inside execute().

JVM settings: -Xmx2G with G1GC (Spark 4.x default), full --add-opens
from Spark's JavaModuleOptions. Replaces -Xms8G -Xmx48G -XX:+UseZGC
which triggered OpenJDK G1/ZGC bugs under heavy allocation pressure.