@@ -107,16 +107,19 @@ lazy val spark = project
       scalaLib213 +: cp
     },
     Test / javaOptions ++= Seq(
-      "-Xms8G",
-      "-Xmx48G",
+      "-Xmx2G",
       "-Xss4M",
-      "-XX:+UseZGC",
-      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
       "--add-opens=java.base/java.lang=ALL-UNNAMED",
       "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
       "--add-opens=java.base/java.io=ALL-UNNAMED",
+      "--add-opens=java.base/java.net=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
       "--add-opens=java.base/java.util=ALL-UNNAMED",
-      "--add-opens=java.base/java.nio=ALL-UNNAMED"
+      "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+      "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
     ),
     Test / javaOptions ++= {
       sys.props.get("spark.test.master").map(v => s"-Dspark.test.master=$v").toSeq
